--- a/main.html
+++ b/main.html
@@ -6,20 +6,33 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>	
+<body>
 	<script>
-		function secondHighest(arr) {
-			//Write your code here
-			
-		}
-
 		function Main() {
-			var n = prompt("Enter the number of elements");
-			var arr = [];
-			for (var i = 0; i < n; i++) {
-				arr[i] = prompt("Enter element " + (i+1));
+			function secondHighest(arr) {
+			if (arr.length < 2 || new Set(arr).size === 1) {
+    return -Infinity;
+  }
+
+  // Find the maximum element
+  let max = -Infinity;
+  for (let i = 0; i < arr.length; i++) {
+    if (arr[i] > max) {
+      max = arr[i];
+    }
+  }
+
+  // Find the second highest element
+  let secondHighest = -Infinity;
+  for (let i = 0; i < arr.length; i++) {
+    if (arr[i] !== max && arr[i] > secondHighest) {
+      secondHighest = arr[i];
+    }
+  }
+
+  return secondHighest;
 			}
-			alert(secondHighest(arr));
+			
 		}
 		Main();
 	</script>
